<resources>
    <string name="app_name">College Admission Prediction</string>
    <string name="user_name">Email / User Name</string>
    <string name="user_password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up"><![CDATA[Sign Up >>]]></string>
    <string name="phone_number">Phone Number</string>
    <string name="country">Country</string>
    <string name="register">Register</string>
    <string name="enterCountry">Enter Country</string>
    <string name="search">Search</string>
    <string name="greScore">GRE Score</string>
    <string name="toeflScore">TOEFL Score</string>
    <string name="sop">SOP</string>
    <string name="lor">LOR</string>
    <string name="cgpa">CGPA</string>
    <string name="research">Research</string>
    <string name="submit">Submit</string>
    <string name="college_name">College Name</string>
    <string name="percentage">Percentage (%)</string>
</resources>